update transport-api swagger
